--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -12,10 +12,10 @@ RUN apt-get update && apt-get install -y \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Move to app dir
-WORKDIR /usr/src/setup
+WORKDIR /usr/src/app
 
 # Move app to filesystem
-COPY ./setup ./
+COPY ./app ./
 
 # Uncomment if you want systemd
 ENV INITSYSTEM on
