--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -12,13 +12,13 @@ RUN apt-get update && apt-get install -y \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Move to app dir
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 
 # Move setup script to filesystem
-COPY ./app ./
+COPY ./setup.sh ./
 
 # Uncomment if you want systemd
 ENV INITSYSTEM on
 
 # Start app
-CMD ["bash", "/usr/src/app/setup.sh"]
+CMD ["bash", "/usr/src/setup.sh"]
