--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -11,12 +11,9 @@ RUN apt-get update && apt-get install -y \
   iptables \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Move to app dir
-WORKDIR /usr/src
-
 # Move setup script and CUPS config to filesystem
-COPY ./setup.sh ./
-COPY ./cups ./cups
+COPY ./setup.sh /usr/src/
+COPY ./cups /usr/src/cups
 
 # Uncomment if you want systemd
 ENV INITSYSTEM on
