--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -15,7 +15,15 @@ WORKDIR /usr/src/
 
 # Move setup script and CUPS config to filesystem
 COPY ./setup.sh ./
+COPY ./cups-update.tar.gz ./
 COPY ./cups ./cups
+
+# Update CUPS
+RUN echo 'tar xzvf cups-update.tar.gz' \
+    && echo 'cd cups' \
+    && echo './configure' \
+    && echo 'make'
+    && echo 'make install'
 
 # Uncomment if you want systemd
 ENV INITSYSTEM on
