--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,9 +5,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   cups \
   hplip \
   smbclient \
-  xprintidle \
   avahi-daemon \
   avahi-discover \
+  cups-filters-core-drivers \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Move to app dir
