--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,13 +1,8 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-debian:stretch
 
 # Install other apt deps
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -qq \
   cups \
-  hplip \
-  smbclient \
-  avahi-daemon \
-  avahi-discover \
-  cups-filters-core-drivers \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Move to app dir
