--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,6 +3,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-debian:stretch
 # Install other apt deps
 RUN apt-get update && apt-get install -qq \
   cups \
+  iptables \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Move to app dir
