--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   airprint:
     build: ./airprint
     network_mode: host
-    expose:
+    ports:
      - "53"
      - "80"
      - "631"
