--- a/airprint/cupsd.conf
+++ b/airprint/cupsd.conf
@@ -23,6 +23,7 @@ BrowseLocalProtocols dnssd
 
 # Default authentication type, when authentication is required...
 DefaultAuthType Basic
+DefaultEncryption Never
 
 # Web interface setting...
 WebInterface Yes
