--- a/avahi/Dockerfile.template
+++ b/avahi/Dockerfile.template
@@ -3,8 +3,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine
 # Install CUPS
 RUN install_packages \
     avahi \
-    bash \
-    dbus
+    bash
 
 # Move setup script and CUPS config to filesystem
 COPY ./entry.sh ./entry.sh
