--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -28,6 +28,9 @@ DefaultEncryption Never
 # Web interface setting...
 WebInterface Yes
 
+# Allow connection thru device public URL
+ServerAlias *
+
 # Restrict access to the server...
 <Location />
   Order allow,deny
