--- a/avahi/avahi-daemon.conf
+++ b/avahi/avahi-daemon.conf
@@ -19,17 +19,17 @@
 # file!
 
 [server]
-#host-name=foo
-#domain-name=local
+host-name=$HOSTNAME
+domain-name=facilities.udel.edu
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=yes
-#allow-interfaces=eth0
+allow-interfaces=wlan0
 #deny-interfaces=eth1
 #check-response-ttl=no
 #use-iff-running=no
 enable-dbus=no
-#disallow-other-stacks=no
+disallow-other-stacks=yes
 #allow-point-to-point=no
 #cache-entries-max=4096
 #clients-max=4096
