--- a/avahi/avahi-daemon.conf
+++ b/avahi/avahi-daemon.conf
@@ -19,17 +19,17 @@
 # file!
 
 [server]
-#host-name=$HOSTNAME
-#domain-name=facilities.udel.edu
+#host-name=foo
+#domain-name=local
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=yes
-#allow-interfaces=wlan0
+#allow-interfaces=eth0
 #deny-interfaces=eth1
 #check-response-ttl=no
 #use-iff-running=no
 enable-dbus=no
-disallow-other-stacks=yes
+#disallow-other-stacks=no
 #allow-point-to-point=no
 #cache-entries-max=4096
 #clients-max=4096
@@ -46,8 +46,8 @@ enable-wide-area=yes
 #disable-user-service-publishing=no
 #add-service-cookie=no
 #publish-addresses=yes
-publish-hinfo=yes
-publish-workstation=yes
+publish-hinfo=no
+publish-workstation=no
 #publish-domain=yes
 #publish-dns-servers=192.168.50.1, 192.168.50.2
 #publish-resolv-conf-dns-servers=yes
