--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -3,7 +3,9 @@ FROM balenalib/raspberrypi3
 # Install the packages we need. Avahi will be included
 RUN install_packages \
     cups \
+    iptables \
     avahi-daemon \
+    dbus \
     libnss-mdns
 
 # Add script
@@ -17,6 +19,3 @@ COPY cupsd.conf /etc/cups/cupsd.conf
 
 #Run Script
 CMD bash run.sh
-
-# Baked-in config file changes so that avahi can run without dbus
-RUN sed -i 's/.*enable\-dbus=.*/enable\-dbus\=no/' /etc/avahi/avahi-daemon.conf
