--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -1,14 +1,10 @@
-#
-# Configuration file for the CUPS scheduler.  See "man cupsd.conf" for a
-# complete description of this file.
-#
+# Configuration file for the CUPS scheduler.
 
-# Log general information in error_log - change "@CUPS_LOG_LEVEL@" to "debug"
-# for troubleshooting...
+# Log warning activity
 LogLevel warn
 PageLogFormat
 
-# Only listen for connections from the local machine.
+# Listen on Port 631 and Port 80
 Listen 631
 Listen 80
 Listen /run/cups/cups.sock
@@ -23,25 +19,23 @@ DefaultEncryption Never
 Browsing On
 BrowseLocalProtocols dnssd
 
-# Default authentication type, when authentication is required...
+# Default authentication type
 DefaultAuthType Basic
-
-# Web interface setting...
 WebInterface Yes
 
-# Restrict access to the server...
+# Open access to the server
 <Location />
   Allow All
   Order allow,deny
 </Location>
 
-# Restrict access to the admin pages...
+# Open access to the admin pages
 <Location /admin>
   Allow All
   Order allow,deny
 </Location>
 
-# Restrict access to configuration files...
+# Open access to configuration files
 <Location /admin/conf>
   # AuthType Default
   # Require user @SYSTEM
@@ -49,7 +43,7 @@ WebInterface Yes
   Order allow,deny
 </Location>
 
-# Restrict access to log files...
+# Open access to log files
 <Location /admin/log>
   # AuthType Default
   # Require user @SYSTEM
