--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -4,8 +4,7 @@
 LogLevel warn
 PageLogFormat
 
-# Listen on Port 631 and Port 80
-Listen 631
+# Listen on Port 80
 Listen 80
 Listen /run/cups/cups.sock
 
