--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -25,30 +25,30 @@ WebInterface Yes
 
 # Open access to the server
 <Location />
-  Allow All
   Order allow,deny
+  Allow from 52.4.252.97
 </Location>
 
 # Open access to the admin pages
 <Location /admin>
-  Allow All
   Order allow,deny
+  Allow from 52.4.252.97
 </Location>
 
 # Open access to configuration files
 <Location /admin/conf>
   # AuthType Default
   # Require user @SYSTEM
-  Allow All
   Order allow,deny
+  Allow from 52.4.252.97
 </Location>
 
 # Open access to log files
 <Location /admin/log>
   # AuthType Default
   # Require user @SYSTEM
-  Allow All
   Order allow,deny
+  Allow from 52.4.252.97
 </Location>
 
 # Set the default printer/job policies...
@@ -73,8 +73,8 @@ WebInterface Yes
   <Limit CUPS-Add-Modify-Printer CUPS-Delete-Printer CUPS-Add-Modify-Class CUPS-Delete-Class CUPS-Set-Default CUPS-Get-Devices>
     # AuthType Default
     # Require user @SYSTEM
-    Allow All
     Order deny,allow
+    Allow from 52.4.252.97
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -119,8 +119,8 @@ WebInterface Yes
   <Limit CUPS-Add-Modify-Printer CUPS-Delete-Printer CUPS-Add-Modify-Class CUPS-Delete-Class CUPS-Set-Default>
     # AuthType Default
     # Require user @SYSTEM
-    Allow All
     Order deny,allow
+    Allow from 52.4.252.97
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -166,8 +166,8 @@ WebInterface Yes
   <Limit CUPS-Add-Modify-Printer CUPS-Delete-Printer CUPS-Add-Modify-Class CUPS-Delete-Class CUPS-Set-Default>
     # AuthType Default
     # Require user @SYSTEM
-    Allow All
     Order deny,allow
+    Allow from 52.4.252.97
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
