--- a/cups/Dockerfile.template
+++ b/cups/Dockerfile.template
@@ -7,7 +7,8 @@ RUN install_packages \
     avahi-daemon \
     dbus \
     libnss-mdns \
-    foomatic-db-compressed-ppds 
+    foomatic-db-compressed-ppds \
+    printer-driver-brlaser
 
 # Add script
 COPY run.sh /
