Allow remote access

--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -7,6 +7,7 @@ PageLogFormat
 # Listen on Port 80
 Listen 80
 Listen 631
+
 Listen /run/cups/cups.sock
 
 # Modify ServerAlias
@@ -25,8 +26,9 @@ WebInterface Yes
 
 # Open access to the server
 <Location />
+  # Allow remote access...
   Order allow,deny
-  Allow from 52.4.252.97
+  Allow all
 </Location>
 
 # Open access to the admin pages
