Add more supported device types and add repo url to DWB
- This project is compatible with devices other than Raspberry Pi 3. Added some devices that have been tested.
- Adding `repoUrl` query parameter to DWB since in Firefox and with some adblockers the referer cannot be determined

Signed-off-by: Rahul Thakoor <rahul@balena.io>

--- a/balena.yml
+++ b/balena.yml
@@ -13,3 +13,10 @@ data:
   defaultDeviceType: "raspberrypi3"
   supportedDeviceTypes:
     - "raspberrypi3"
+    - "raspberrypi4-64"
+    - "fincm3"
+    - "nanopi-neo-air"
+    - "raspberrypi3-64"
+    - "intel-nuc"
+    - "beaglebone-green-wifi"
+    - "genericx86-64-ext"
